fix java jni bugs in windows env